--- a/css/theme/catalyst.css
+++ b/css/theme/catalyst.css
@@ -72,8 +72,8 @@ Catalyst themed reveal.js presentation
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #FFF;
-  background-color: #FFF; }
+  background: #343032;
+  background-color: #343032; }
 
 .reveal {
   font-family: "Lato", sans-serif;
@@ -352,7 +352,7 @@ body {
 .reveal h5,
 .reveal h6 {
   font-weight: 900;
-  text-shadow: 1px 1px 2px #000;
+  text-shadow: none;
   color: #f3f3f3; }
 
 .reveal h1.catalyst-logo {
@@ -361,6 +361,15 @@ body {
   color: transparent;
   width: 100%;
   height: 100px;
+  padding-bottom: 30px; }
+
+.reveal h3.catalyst-logo {
+  background: url(images/catalyst-logo.svg) no-repeat 50% 0/50% auto;
+  font-size: 0;
+  color: transparent;
+  width: 80%;
+  height: 80px;
+  margin-left: 10%;
   padding-bottom: 30px; }
 
 .reveal .print-only {
@@ -372,7 +381,7 @@ body {
  *********************************************/
 .reveal p {
   color: #f3f3f3;
-  text-shadow: 1px 1px 1px #000; }
+  text-shadow: none; }
 
 .reveal p.small-text,
 .reveal span.small-text {
@@ -380,7 +389,7 @@ body {
 
 .reveal blockquote {
   color: #f3f3f3;
-  text-shadow: 1px 1px 1px #000;
+  text-shadow: none;
   padding: 20px;
   font-size: 0.7em;
   letter-spacing: 0.01em;
@@ -431,13 +440,13 @@ body {
 .reveal ul li {
   font-size: 0.8em;
   color: #f3f3f3;
-  text-shadow: 1px 1px 1px #000; }
+  text-shadow: none; }
 
 /*********************************************
  * TABLES
  *********************************************/
 .reveal table {
-  text-shadow: 1px 1px 1px #000;
+  text-shadow: none;
   color: #f3f3f3;
   margin: 20px auto;
   font-size: 0.6em;
